--- a/style.css
+++ b/style.css
@@ -535,6 +535,10 @@ button[type="submit"]:hover {
 }
 
 /* Final footer*/
+@media (max-width: 768px) {
+    body {
+        width: 100%;
+    }
 
 @media (max-width: 768px) {
     #img-header-size {
