--- a/style.css
+++ b/style.css
@@ -547,7 +547,10 @@ heigth: 380px;
 width: 200px;
 heigth:26px;
 }
-
+form, p {
+font-size:8px;
+display:flex;
+}
 @media (max-width: 768px) {
     #img-header-size {
         height: 120px;
