--- a/style.css
+++ b/style.css
@@ -544,17 +544,17 @@ button[type="submit"]:hover {
         margin-top: -9px;
         object-fit: contain;
     }
-    #menu-item-content{
-heigth:700px;
-width:100%;
+    #menu-item{
+    heigth:700px;
+    width:100%;
 }
     .container-formulario{
-width: 280px;
-heigth: 380px;
+    width: 280px;
+    heigth: 380px;
 }
     input{
-width: 200px;
-heigth:26px;
+    width: 200px;
+    heigth:26px;
 }
 
 }
