--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
     /* resete estilo da pagina*/
     padding: 0;
     margin: 0;
-    background-color: white;
-}
+background-color: rgb(0, 0, 0);}
 
 /* Inicio ajuste dotos*/
 .slick-dots
