--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ button[type="submit"]:hover {
         margin-top: -9px;
         object-fit: contain;
     }
-    #menu-item{
+    #menu-item-content{
     heigth:700px;
     width:100%;
 }
