--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     /* resete estilo da pagina*/
     padding: 0;
     margin: 0;
-background-color: rgb(0, 0, 0);
+background-color:pink;
 }
 
 /* Inicio ajuste dotos*/
